--- a/css/style.css
+++ b/css/style.css
@@ -2,25 +2,33 @@
 
 @font-face{
     font-family: Gilroy;
-    src: url('../fonts/Gilroylight.ttf') format('truetype');
+    src: url('../fonts/Gilroylight.ttf') format('truetype'),
+         url('Gilroy-Light.woff2') format('woff2'),
+         url('Gilroy-Light.woff') format('woff');
     font-weight: normal;
 }
 
 @font-face{
     font-family: Gilroy;
-    src: url('../fonts/Gilroyextrabold.ttf') format('truetype');
+    src: url('../fonts/Gilroyextrabold.ttf') format('truetype'),
+    url('Gilroy-ExtraBold.woff2') format('woff2'),
+    url('Gilroy-ExtraBold.woff') format('woff');
     font-weight: bolder;
 }
 
 @font-face{
     font-family: OpenSans;
-    src: url('../fonts/OpenSans-Light.ttf') format('truetype');
+    src: url('../fonts/OpenSans-Light.ttf') format('truetype'),
+         url('OpenSans-Light.woff2') format('woff2'),
+         url('OpenSans-Light.woff') format('woff');
     font-weight: lighter;
 }
 
 @font-face{
     font-family: OpenSans;
-    src: url('../fonts/OpenSans-Regular.ttf') format('truetype');
+    src: url('../fonts/OpenSans-Regular.ttf') format('truetype'),
+         url('OpenSans-Light.woff2') format('woff2'),
+         url('OpenSans-Light.woff') format('woff');
     font-weight: normal;
 }
 
